objects/mcdm_15__Bulk_Send_Job__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__Batch_Job_Id__c</fullName>
        <description>The associated batch apex job ID that prepared the bulk send audience.</description>
        <label>Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Campaign_Error__c</fullName>
        <description>Shows general errors related to a Campaign Bulk Send</description>
        <label>Campaign Member Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Campaign_Member_States_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that is true when Campaign Member Journey Approval States are updated after a campaign bulk send has completed.</description>
        <label>Campaign Member States Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated campaign that this job was created from.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Bulk Send Jobs</relationshipLabel>
        <relationshipName>Bulk_Send_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunk_Error_Count__c</fullName>
        <description># of Bulk Send Batches that have errors</description>
        <label>Chunk Error Count</label>
        <summaryFilterItems>
            <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Has_Errors__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunks_Completed__c</fullName>
        <description># of Bulk Send Batches that have completed</description>
        <label># Chunks Completed</label>
        <summaryFilterItems>
            <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Chunk_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunks_Processing__c</fullName>
        <description># of Bulk Send Batches that are processing</description>
        <label># Chunks Processing</label>
        <summaryFilterItems>
            <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Chunk_Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </summaryFilterItems>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunks_Sending__c</fullName>
        <description># of Bulk Send Batches that are sending</description>
        <label># Chunks Sending</label>
        <summaryFilterItems>
            <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Chunk_Status__c</field>
            <operation>equals</operation>
            <value>Sending</value>
        </summaryFilterItems>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Chunks_Waiting__c</fullName>
        <description># of Bulk Send Batches that are waiting to be sent</description>
        <label># Chunks Waiting</label>
        <summaryFilterItems>
            <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Chunk_Status__c</field>
            <operation>equals</operation>
            <value>Waiting</value>
        </summaryFilterItems>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__CustomPluginData__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Custom Plugin Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Error__c</fullName>
        <description>Shows top level errors related to the Bulk Send Job</description>
        <label>Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__External_Journey_Id__c</fullName>
        <description>External ID of the linked journey for this bulk send</description>
        <label>External Journey Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Greeting__c</fullName>
        <description>JSON Greeting map used in bulk send for custom greeting</description>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Has_Errors__c</fullName>
        <description>Is true if any of the associated chunks have errors on them.</description>
        <formula>mcdm_15__Chunk_Error_Count__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Is_Sendable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is true if this bulk send is prepared and ready to be sent.</description>
        <label>Is Sendable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Linked_Business_Unit_Id__c</fullName>
        <description>ID of the linked business unit for this send</description>
        <label>Linked Business Unit Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Mobile_Custom_Field_Contact__c</fullName>
        <description>Custom field for mobile phone for Contact</description>
        <label>Mobile Custom Field for Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Mobile_Custom_Field_Lead__c</fullName>
        <description>Custom field for mobile phone for Lead</description>
        <label>Mobile Custom Field for Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Quick_Send_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated quick send journey that this job was created from.</description>
        <label>Quick Send Message</label>
        <referenceTo>mcdm_15__QuickSendJourney__c</referenceTo>
        <relationshipLabel>Bulk Send Jobs</relationshipLabel>
        <relationshipName>Bulk_Send_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendTime__c</fullName>
        <description>The scheduled date and time of the send if this bulk send is a scheduled one</description>
        <inlineHelpText>The scheduled date and time of the send</inlineHelpText>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Send_From__c</fullName>
        <description>Send from mapping for use in the bulk send</description>
        <label>Send From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Status__c</fullName>
        <description>The status of the bulk send job, Not Started, Processing, Waiting, Sending, Completed</description>
        <formula>IF(mcdm_15__Total_Chunks__c = 0, $Label.mcdm_15__csvjobstatusnotstarted, IF( mcdm_15__Chunks_Completed__c=mcdm_15__Total_Chunks__c, $Label.mcdm_15__csvjobstatuscompleted,  IF( AND(mcdm_15__Chunks_Waiting__c = mcdm_15__Total_Chunks__c, mcdm_15__Is_Sendable__c) , $Label.mcdm_15__csvjobstatuswaiting,  IF( mcdm_15__Chunks_Sending__c &gt; 0, $Label.mcdm_15__csvjobstatussending,  IF( AND(OR(mcdm_15__Chunks_Processing__c &gt; 0, mcdm_15__Chunks_Waiting__c &gt; 0), NOT(mcdm_15__Is_Sendable__c)),  $Label.mcdm_15__csvjobstatusprocessing, $Label.mcdm_15__csvjobstatusnotstarted) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Total_Chunks__c</fullName>
        <description># of Bulk Send Batches associated with this bulk send job</description>
        <label># Chunks</label>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Total_Members__c</fullName>
        <description>Total number of members in this bulk send job across all bulk send batches</description>
        <label># Total Members</label>
        <summarizedField>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Members__c</summarizedField>
        <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Bulk Send Job</label>
    <nameField>
        <displayFormat>DMBSJ-{00000}</displayFormat>
        <label>Bulk Send Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Send Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>